--- a/appointment2206082505/src/main/resources/templates/home.html
+++ b/appointment2206082505/src/main/resources/templates/home.html
@@ -10,27 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: purple;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="color: white;">ApapMedika</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item me-3">
-                        <a class="nav-link" href="#" style="color: white;">Home</a>
-                    </li>
-                    <li class="nav-item me-3">
-                        <a class="nav-link" href="#" style="color: white;">Appointment</a>
-                    </li>
-                    <li class="nav-item me-3">
-                        <a class="nav-link" href="#" style="color: white;">Doctors</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
 
     <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
         <h1>Appointment System</h1>
