--- a/appointment2206082505/src/main/resources/templates/all-appointment.html
+++ b/appointment2206082505/src/main/resources/templates/all-appointment.html
@@ -6,14 +6,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
     <title>Home</title>
+
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
+
 </head>
 
 <body>
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
 
-    <div class="container mt-4">
+    <div class="container mt-4 mb-5">
         <div class="row">
             <div class="col-md-6">
                 <h2>Appointments</h2>
@@ -28,6 +36,9 @@
             <div class="col-md-3">
                 <select class="form-select" id="statusFilter">
                     <option value="">All Status</option>
+                    <option value="0">Created</option>
+                    <option value="1">Done</option>
+                    <option value="3">Cancelled</option>
                 </select>
             </div>
             <div class="col-md-6">
@@ -60,13 +71,24 @@
                         <td th:text="${#dates.format(appointment.date, 'dd-MM-yyyy')}"></td>
                         <td th:text="${appointment.status == 0 ? 'Created' : appointment.status == 1 ? 'Done' : 'Cancelled'}"></td>
                         <td>
-                            <button class="btn btn-primary btn-sm">Detail</button>
+                            <a type="button" class="btn btn-md btn-primary"
+                                th:href="@{/appointment/{id}(id=${appointment.id})}">Detail
+                            </a>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
+
+    <script>
+        $(document).ready(function () {
+            $('#appointmentsTable').DataTable({
+                "lengthMenu": [10, 20, 30],
+            });
+        });
+    </script>
+
 </body>
 
 </html>
