feat: create appointment patient exists

--- a/appointment2206082505/src/main/resources/templates/all-appointment.html
+++ b/appointment2206082505/src/main/resources/templates/all-appointment.html
@@ -27,8 +27,8 @@
                 <h2>Appointments</h2>
             </div>
             <div class="col-md-6 text-end">
-                <button class="btn btn-secondary me-2">Show Statistic</button>
-                <button class="btn btn-primary">Add Appointment</button>
+                <a type="button" class="btn btn-secondary" href="#">Show Statistic</a>
+                <a type="button" class="btn btn-primary" href="/patient/search">Add Appointment</a>
             </div>
         </div>
         <hr>
