--- a/appointment2206082505/src/main/resources/templates/fragments/navbar.html
+++ b/appointment2206082505/src/main/resources/templates/fragments/navbar.html
@@ -20,7 +20,7 @@
 
 <nav th:fragment="navbar" class="navbar navbar-expand-lg" style="background-color: purple;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="color: white;">ApapMedika</a>
+        <a class="navbar-brand fw-bold" href="/" style="color: white;">ApapMedika</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
