--- a/appointment2206082505/src/main/resources/templates/success-create-patient-appointment.html
+++ b/appointment2206082505/src/main/resources/templates/success-create-patient-appointment.html
@@ -6,24 +6,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-    <title>APAP Medika</title>
-
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <title>Success Create Patient & Appointment</title>
 
     <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
     <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
-
 </head>
 
 <body>
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
 
-    <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
-        <h1 class="fw-bold">Appointment System</h1>
+    <div class="d-flex flex-column align-items-center justify-content-center" style="height: 80vh;">
+        <h1 class="text-center fw-bold">Patient & Appointment Created!</h1>
+        <p class="text-center" th:text="${responseMessage}"></p>
+        <div class="text-center">
+            <a href="/" class="btn btn-primary">Go back to Home</a>
+        </div>
     </div>
+
 </body>
 
 </html>
