--- a/appointment2206082505/src/main/resources/templates/form-create-patient-appointment.html
+++ b/appointment2206082505/src/main/resources/templates/form-create-patient-appointment.html
@@ -10,7 +10,7 @@
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
-    <title>Create Patient & Appointment</title>
+    <title>APAP Medika</title>
 
     <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
     <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
