--- a/appointment2206082505/src/main/resources/templates/response-error-rest.html
+++ b/appointment2206082505/src/main/resources/templates/response-error-rest.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
     <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
-    <title>Error</title>
+    <title>APAP Medika</title>
 </head>
 
 <body>
