--- a/appointment2206082505/src/main/resources/templates/success-create-patient-appointment.html
+++ b/appointment2206082505/src/main/resources/templates/success-create-patient-appointment.html
@@ -10,7 +10,7 @@
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
-    <title>Success Create Patient & Appointment</title>
+    <title>APAP Medika</title>
 
     <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
     <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
@@ -23,7 +23,7 @@
         <h1 class="text-center fw-bold">Patient & Appointment Created!</h1>
         <p class="text-center" th:text="${responseMessage}"></p>
         <div class="text-center">
-            <a href="/" class="btn btn-primary">Go back to Home</a>
+            <a href="/appointment/all" class="btn btn-primary">See all appointments</a>
         </div>
     </div>
 
