--- a/appointment2206082505/src/main/resources/templates/success-update-appointment.html
+++ b/appointment2206082505/src/main/resources/templates/success-update-appointment.html
@@ -20,7 +20,7 @@
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
 
     <div class="d-flex flex-column align-items-center justify-content-center" style="height: 80vh;">
-        <h1 class="text-center fw-bold">Appointment Created!</h1>
+        <h1 class="text-center fw-bold">Appointment Updated!</h1>
         <p class="text-center" th:text="${responseMessage}"></p>
         <div class="text-center">
             <a href="/appointment/all" class="btn btn-primary">See all appointments</a>
