feat: viewall doctor

--- a/appointment2206082505/src/main/resources/templates/fragments/navbar.html
+++ b/appointment2206082505/src/main/resources/templates/fragments/navbar.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="/appointment/all" style="color: white;">Appointment</a>
                 </li>
                 <li class="nav-item me-3">
-                    <a class="nav-link" href="/" style="color: white;">Doctors</a>
+                    <a class="nav-link" href="/doctor/all" style="color: white;">Doctors</a>
                 </li>
             </ul>
         </div>
