--- a/appointment2206082505/src/main/resources/templates/all-appointment.html
+++ b/appointment2206082505/src/main/resources/templates/all-appointment.html
@@ -3,19 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
     <title>APAP Medika</title>
-
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-    <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
-    <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
-
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
 </head>
 
 <body>
@@ -36,17 +30,19 @@
             <div class="col-md-3">
                 <select class="form-select" id="statusFilter">
                     <option value="">All Status</option>
-                    <option value="0">Created</option>
-                    <option value="1">Done</option>
-                    <option value="3">Cancelled</option>
+                    <option value="Created">Created</option>
+                    <option value="Done">Done</option>
+                    <option value="Cancelled">Cancelled</option>
                 </select>
             </div>
-            <div class="col-md-6">
-                <div class="input-group">
-                    <input type="text" class="form-control" id="searchInput" placeholder="Search by name...">
-                    <input type="date" class="form-control" id="fromDate">
-                    <input type="date" class="form-control" id="toDate">
-                </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control" id="searchInput" placeholder="Search by name...">
+            </div>
+            <div class="col-md-3">
+                <input type="date" class="form-control" id="fromDate" placeholder="From Date" onfocus="(this.type='date')" onblur="(this.type='text')">
+            </div>
+            <div class="col-md-3">
+                <input type="date" class="form-control" id="toDate" placeholder="To Date" onfocus="(this.type='date')" onblur="(this.type='text')">
             </div>
         </div>
         <div class="table-responsive">
@@ -68,7 +64,7 @@
                         <td th:text="${appointment.id}"></td>
                         <td th:text="${appointment.doctor.name}"></td>
                         <td th:text="${appointment.patient.name}"></td>
-                        <td th:text="${#dates.format(appointment.date, 'dd-MM-yyyy')}"></td>
+                        <td th:text="${#dates.format(appointment.date, 'yyyy-MM-dd')}" class="appointment-date"></td>
                         <td th:text="${appointment.status == 0 ? 'Created' : appointment.status == 1 ? 'Done' : 'Cancelled'}"></td>
                         <td>
                             <a type="button" class="btn btn-md btn-primary"
@@ -81,14 +77,45 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+
     <script>
         $(document).ready(function () {
-            $('#appointmentsTable').DataTable({
+            var table = $('#appointmentsTable').DataTable({
                 "lengthMenu": [10, 20, 30],
+                "searching": false,
+                "language": {
+                    "search": ""
+                }
             });
+
+            function applyFilters() {
+                var nameFilter = $('#searchInput').val().toLowerCase();
+                var statusFilter = $('#statusFilter').val();
+                var fromDate = $('#fromDate').val();
+                var toDate = $('#toDate').val();
+
+                table.rows().every(function() {
+                    var row = this.node();
+                    var doctorName = $(row).find('td:eq(2)').text().toLowerCase();
+                    var patientName = $(row).find('td:eq(3)').text().toLowerCase();
+                    var status = $(row).find('td:eq(5)').text();
+                    var date = $(row).find('.appointment-date').text();
+
+                    var nameMatch = doctorName.includes(nameFilter) || patientName.includes(nameFilter);
+                    var statusMatch = !statusFilter || status === statusFilter;
+                    var dateMatch = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
+
+                    this.nodes().to$().toggle(nameMatch && statusMatch && dateMatch);
+                });
+            }
+
+            $('#searchInput, #statusFilter, #fromDate, #toDate').on('keyup change', applyFilters);
         });
     </script>
-
 </body>
-
 </html>
