--- a/appointment2206082505/src/main/resources/templates/all-doctor.html
+++ b/appointment2206082505/src/main/resources/templates/all-doctor.html
@@ -17,7 +17,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h5 class="mb-0">Doctors</h5>
-                <a type="button" class="btn btn-primary" href="/">Add Doctor</a>
+                <a type="button" class="btn btn-primary" th:href="@{/doctor/create}">Add Doctor</a>
             </div>
             <div class="card-body">
                 <div class="row mb-3">
