feat: appointment stat chart

--- a/appointment2206082505/src/main/resources/templates/all-appointment.html
+++ b/appointment2206082505/src/main/resources/templates/all-appointment.html
@@ -21,7 +21,7 @@
                 <h2>Appointments</h2>
             </div>
             <div class="col-md-6 text-end">
-                <a type="button" class="btn btn-secondary" href="#">Show Statistic</a>
+                <a type="button" class="btn btn-secondary" href="/appointment/stat">Show Statistic</a>
                 <a type="button" class="btn btn-primary" href="/patient/search">Add Appointment</a>
             </div>
         </div>
