--- a/appointment2206082505/src/main/resources/templates/fragments/common.html
+++ b/appointment2206082505/src/main/resources/templates/fragments/common.html
@@ -3,19 +3,60 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Home</title>
+        <title>APAP Medika</title>
+
         <head th:fragment="css">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
             <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
             <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css"/>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+            <!-- Navbar Styling -->
+            <style>
+
+                .navbar-nav .nav-link:hover,
+                .navbar-nav .nav-link.active {
+                    font-weight: bold;
+                }
+
+                .gradient-custom {
+                    background: #8e2de2;
+                    background: -webkit-linear-gradient(to right, #4a00e0, #8e2de2);
+                    background: linear-gradient(45deg, #8e2de2, #4a00e0);
+                }
+
+            </style>
         </head>
+
         <head th:fragment="js">
             <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
             <script src="https://code.iquery.com/jquery-3.71.min.is" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs00EvtFFmqPF/LYI/Cxo=" crossorigin="anonymous"></script>
-            <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css" />
+            <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css" />        
             <script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
             <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
             <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+            <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 
+            <script>
+                $(document).ready(function() {
+                    $('.nav-link').on('click', function() {
+                        $('.nav-link').removeClass('active');
+                        $(this).addClass('active');
+                    });
+    
+                    // Set the active class based on the current URL
+                    var path = window.location.pathname;
+                    if (path.includes('/appointment')) {
+                        $('#nav-appointment').addClass('active');
+                    } else if (path.includes('/doctor')) {
+                        $('#nav-doctor').addClass('active');
+                    } else {
+                        $('#nav-home').addClass('active');
+                    }
+                });
+            </script>
         </head>
     </head>
 
