--- a/appointment2206082505/src/main/resources/templates/home.html
+++ b/appointment2206082505/src/main/resources/templates/home.html
@@ -3,33 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <title>APAP Medika</title>
-
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-    <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
-    <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
-
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
 </head>
 
 <body>
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
 
     <div class="d-flex flex-column justify-content-center align-items-center" style="height: 80vh;">
-        <h1 class="fw-bold text-center mb-3">Appointment System</h1>
+        <h1 class="fw-bold text-center mb-5">Appointment System</h1>
 
         <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
             <div class="card-body">
-                <h1 class="card-title text-center" th:text="${totalAppointmentToday}"></h1>
+                <h1 class="card-title text-center display-4 fw-bold" th:text="${totalAppointmentToday}"></h1>
                 <p class="card-text text-center">Today's Ongoing Appointment</p>
             </div>
         </div>
+
+        <h2></h2>
     </div>
 </body>
 
